--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,15 +1,23 @@
+.pageBody {
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
 .app {
   width: 402px;
   height: 469px;
   background-color: white;
-  margin: 250px auto;
+  margin: 0px auto;
   border-radius: 10px;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .header {
   font-size: 18px;
-  color:rgba(79, 79, 79, 1);
+  color: rgba(79, 79, 79, 1);
   font-style: normal;
   font-weight: 500;
   line-height: 27px;
@@ -39,12 +47,43 @@ p {
   text-align: center;
 }
 
-button {
-  display: block;
-  margin: 0px auto;
+input {
+  display: none;
+}
+
+.btn {
+  padding: 5px 7px;
+  border-radius: 5px;
   background-color: #2F80ED;
   color: white;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgba(189, 189, 189, 1);
+}
+
+.uploadProgress {
+  width: 400px;
+  height: 144px;
+  background-color: white;
+  margin: 0px auto;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.1);
+}
+
+.uploadProgress h1 {
+  font-size: 18px;
+  margin-left: 32px;
+  margin-top: 36px;
+  color: rgba(79, 79, 79, 1);
+  font-family: 'Poppins', sans-serif;
+}
+
+.progressBar {
+  width: 340px;
+  height: 6px;
   border-radius: 8px;
-  border: none;
-  padding: 10px;
+  background: #2F80ED;
+  margin: 44px auto;
 }
